# dccutils

./: README.md  README.rst  RELEASE.md  release.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dccutils/: __init__.py  blender.py  dcc_blender.py  dcc_houdini.py  dcc_maya.py  exceptions.py  guess.py  houdini.py  maya.py  software.py  unreal.py
