[metadata]
name = DCC Utils
description = Classes to abstract DCC functions and make your code DCC agnostic
long_description = file: README.md
version = attr: qtazu.__version__.__version__
keywords = cg, vfx, pipeline, production, asset manager
license = MIT
license_file = LICENSE
author = CG Wire
author_email = contact@cg-wire.com
url = https://github.com/cgwire/dcc-utils
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Desktop 
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =

[options.packages.find]
include = dccutils*

[options.extras_require]
dev =
    wheel

test =
    pytest
    pytest-cov
