[metadata]
name = dccutils
description = Classes to abstract DCC functions and make your code DCC work agnostic
long_description = file: README.rst
version = attr: dccutils.__version__.__version__
keywords = cg, vfx, pipeline, production, asset manager
license = MIT
license_file = LICENSE
author = CGWire
author_email = contact@cg-wire.com
url = https://github.com/cgwire/dcc-utils
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:

[options.packages.find]
include = dccutils*

[options.extras_require]
dev =
    wheel

test =
    black<=22.8.0; python_version >= "3.5"
    pre-commit<=2.20.0
